Attempt to fix build warnings and missing extension permission

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -49,11 +49,7 @@
       </section>
     </main>
 
-    <script>
-      // Prism manual mode prevents auto-highlight before we inject content. :contentReference[oaicite:8]{index=8}
-      window.Prism = window.Prism || {};
-      Prism.manual = true;
-    </script>
+    <script src="prism-manual.js"></script>
     <script src="../vendor/prism/prism.js"></script>
     <script src="../vendor/prism/prism-json.js"></script>
 
