Try to resolve import error

--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -53,6 +53,6 @@
     <script src="../vendor/prism/prism.js"></script>
     <script src="../vendor/prism/prism-json.js"></script>
 
-    <script type="module" src="viewer.js"></script>
+    <script type="module" src="./viewer.js"></script>
   </body>
 </html>
